# ChangeLog for x11-misc/light-locker
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*light-locker-1.5.1 (06 Jan 2015)

  06 Jan 2015; Denis Dupeyron <calchan@gentoo.org> +light-locker-1.5.1.ebuild,
  +metadata.xml:
  Initial commit of x11-misc/light-locker.
