@@ -1,1 +1,1 @@
-DIST light-locker-1.5.1.tar.bz2 504427 SHA256 592c09aac1bd49b2124030f3c314c7267759bd349f4a010fcb05c061e324868d SHA512 49e280432df2f982924787acc6fb553bf53405fe059096ca1789c40c7cbec4c83f256dab9e4f65e2c397adacc6969a303768761c815375d73f11d44efac934a3 WHIRLPOOL cb6b0c36f6dd60d953333ec2c49da9edabcd8d85f1e89f20e580727332a73d0c5119ceb8415240661ad84e4c00a7d24607635a16540d0ccce4e027b89b89d43b
+DIST light-locker-1.6.0.tar.bz2 522644 SHA256 63e0cbcc7ceb8ad695b4bbe7eb9ba5fee32f47790ccde048748d8a47edd32ad0 SHA512 23e10a2d32eabf2cfcc898dcb0c8f98cc7c4e02a3fa83d1a5bd19c0f11251123e618f469bada2cd1fa4f028396c5fbe5751f9943b1be4448aefc2d64fea1eb18 WHIRLPOOL 3d16015765caa8f166a7b1ce8529077bca8809b5d4b66f4a29a852a8f610286ea957f87bc0f10b119083153b2412a77232214b8a428999d5522833e779338500
