@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*light-locker-1.6.0 (17 Mar 2015)
+
+  17 Mar 2015; Denis Dupeyron <calchan@gentoo.org> -light-locker-1.5.1.ebuild,
+  +light-locker-1.6.0.ebuild:
+  Version bump.
+
 *light-locker-1.5.1 (06 Jan 2015)
 
   06 Jan 2015; Denis Dupeyron <calchan@gentoo.org> +light-locker-1.5.1.ebuild,
